# transport-studio

./: .gitignore  CONTEXT.md  README.md  THIRD_PARTY_NOTICES.md  package.json  playwright.config.ts  stryker.config.mjs  tsconfig.base.json  tsconfig.stryker.json  vitest.config.ts
apps/studio/: index.html  package.json  vite.config.ts
apps/studio/src-tauri/: Cargo.toml  tauri.conf.json
apps/studio/src-tauri/crates/native-execution-contract/: Cargo.toml
apps/studio/src-tauri/crates/native-execution-contract/src/: lib.rs
apps/studio/src-tauri/crates/spacetime-physics/: Cargo.toml
apps/studio/src-tauri/crates/spacetime-physics/src/: adm.rs  amr.rs  bssn.rs  coupling.rs  curvature.rs  diagnostics.rs  geodesic.rs  geometry.rs  grhd.rs  grid.rs  grid_metric_adapter.rs  io.rs  kernel.rs  lib.rs  math_gateway.rs  matter.rs  metric.rs  numerics.rs  packet_deposition.rs  physics_v1.rs  radiation.rs  radiation_matter.rs  radiative_shock_tube.rs  shock_tube.rs  tensor.rs  tests.rs  transport.rs  units.rs  valencia.rs  vec3.rs  verification.rs
apps/studio/src-tauri/crates/spacetime-physics/tests/: bssn_source_projection.rs  coupled_kernel_toy.rs  gray_m1_radiation.rs  grid_metric_adapter.rs  kernel_interface.rs  packet_deposition.rs  radiation_matter_exchange.rs  single_block_amr.rs  valencia_flux_step.rs  valencia_recovery.rs  verification_ladder.rs  verification_problem.rs
apps/studio/src-tauri/crates/transport-engine/: Cargo.toml
apps/studio/src-tauri/crates/transport-engine/src/: diagnostics.rs  geometry.rs  lib.rs  photon_smoke.rs  v1.rs
apps/studio/src-tauri/crates/transport-engine/tests/: public_facade.rs
apps/studio/src-tauri/src/: lib.rs  main.rs  mod.rs
docs/: frontend-repair-plan.md  hygiene.md
docs/architecture/: 0001-first-crack.md  0002-front-end-beef-up.md  0003-editor-scene-vs-transport-problem.md  ADR-0001.md  ADR-0002.md  ADR-0003.md  ADR-0004.md  ADR-0005.md  ADR-0006.md  ADR-0007.md  ADR-0008-runtime-neutral-native-execution.md  ADR-0009-geometric-field-facade.md  Extension-0001.md  PRD-0001-relativistic-multiphysics-spine.md  PRD-0002-geometric-field-sections.md  V1-physics-engine-plan.md  (+10 more)
scripts/: cargo-target.mjs  cleanup-frontend-repair-worktree.sh  dev  frontend-repair-paths.txt  hygiene-lib.mjs  hygiene-size.mjs  hygiene.test.ts  patch-frontend-repair-plan.sh  propagate-frontend-repair-delta.sh  worktree-retire.mjs
(+104 files in other folders)
