[package]
name = "transport-studio"
version = "0.0.0"
edition = "2024"

[workspace]
members = [
    ".",
    "crates/spacetime-physics",
    "crates/transport-engine",
]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spacetime-physics = { path = "crates/spacetime-physics" }
tauri = { version = "2", features = [] }
transport-engine = { path = "crates/transport-engine" }

[build-dependencies]
tauri-build = { version = "2", features = [] }
