[package]
name = "transport-studio"
version = "0.0.0"
edition = "2024"

[workspace]
members = [
    ".",
    "crates/native-execution-contract",
    "crates/spacetime-physics",
    "crates/transport-engine",
]

[dependencies]
native-execution-contract = { path = "crates/native-execution-contract" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spacetime-physics = { path = "crates/spacetime-physics" }
tauri = { version = "2", features = [] }
transport-engine = { path = "crates/transport-engine" }

[build-dependencies]
tauri-build = { version = "2", features = [] }
