[package]
name = "spacetime-physics"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
ndarray = { version = "0.16", features = ["serde", "rayon"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"

[dev-dependencies]
approx = "0.5"
serde_json = "1"

[features]
default = []
export-hdf5 = []
export-vtk = []
